fix syntax styles